Crisis Response App/objects/Continuity_Plan__c.object
<CustomObject>
    <fields>
        <fullName>Crisis__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Crisis</label>
        <referenceTo>Crisis__c</referenceTo>
        <relationshipLabel>Continuity Plans</relationshipLabel>
        <relationshipName>Continuity_Plans</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Department__c</fullName>
        <inlineHelpText>Organization&apos;s department the plan pertains to</inlineHelpText>
        <label>Department</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <inlineHelpText>High-level description of the plan</inlineHelpText>
        <label>Description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Plan_Documentation__c</fullName>
        <inlineHelpText>Link to the full documentation of the Continuity Plan (Quip, SharePoint, DropBox, etc)</inlineHelpText>
        <label>Plan Documentation</label>
        <type>Url</type>
    </fields>
    <label>Continuity Plan</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Continuity Plan Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Continuity Plans</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>